--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://vladmaraev.github.io/react-xstate-colourchanger",
+  "homepage": "https://chickenbror.github.io/lab2-bot",
   "name": "xstate-react-typescript-template",
   "version": "1.0.0",
   "description": "",
