--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://chickenbror.github.io/lab2-bot",
+  "homepage": "https://chickenbror.github.io/lab2-bot/tree/lab4",
   "name": "xstate-react-typescript-template",
   "version": "1.0.0",
   "description": "",
